--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -27,7 +27,7 @@ if(wxWidgetsSource_ADDED)
       --disable-sys-libs
       --with-libjpeg=builtin
       --with-libtiff=builtin
-      BUILD_COMMAND make -j
+      BUILD_COMMAND make -j4
       INSTALL_COMMAND make install
       LOG_CONFIGURE ON
       LOG_BUILD ON
@@ -151,4 +151,13 @@ if(wxWidgetsSource_ADDED)
 
 else()
   message(FATAL_ERROR "Failed to download wxWidgets source using CPM.")
+endif()
+
+
+if("${EXTERNAL_PYTHON_BINDINGS}")
+CPMAddPackage(
+    NAME nanobind
+    GITHUB_REPOSITORY "wjakob/nanobind"
+    GIT_TAG "v2.7.0"
+)
 endif()
