--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,11 +3,12 @@ name = "olex2"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.8"
 dependencies = [
     "nanobind>=2.7.0",
     "pip>=25.0.1",
+    "pip>=25.0.1",
+    "python-dev-tools>=2019.2.24",
 ]
 
-[tool.uv.sources]
-litgen = { git = "https://github.com/pthom/litgen" }
+
