I have no idea why it doesn't work

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,7 +66,6 @@ pkg_check_modules(PANGOFT2 REQUIRED pangoft2)
 pkg_check_modules(WAYLAND_CLIENT REQUIRED wayland-client)
 pkg_check_modules(WAYLAND_CURSOR REQUIRED wayland-cursor) # Often needed for client apps
 pkg_check_modules(WAYLAND_EGL REQUIRED wayland-egl)
-#pkg_check_modules(WEBKIT2GTK REQUIRED webkit2gtk-4.0)
 set(OpenGL_GL_PREFERENCE "LEGACY")
 find_package(OpenGL REQUIRED)
 include_directories(${OPENGL_INCLUDE_DIR})
@@ -148,8 +147,8 @@ INCLUDE_DIRECTORIES("${src}/sdl")
 INCLUDE_DIRECTORIES("${src}/xlib")
 INCLUDE_DIRECTORIES("${src}/xlib/absorpc")
 INCLUDE_DIRECTORIES("${src}/sdl/math")
-INCLUDE_DIRECTORIES("${wxWidgets_INCLUDE_DIR_2}")
 INCLUDE_DIRECTORIES("${wxWidgets_INCLUDE_DIR_1}")
+INCLUDE_DIRECTORIES("${wxWidgets_INCLUDE_DIR_2}")
 INCLUDE_DIRECTORIES(
     ${PANGOFT2_INCLUDE_DIRS}
     ${WAYLAND_CLIENT_INCLUDE_DIRS}
@@ -158,9 +157,11 @@ INCLUDE_DIRECTORIES(
 )
 ADD_EXECUTABLE(unirun ${unirun_SRCS} ${all_SRCS})
 ADD_EXECUTABLE(olex2 ${olex2_SRCS} ${all_SRCS} )
-
+#INCLUDE_DIRECTORIES(${WEBKIT2GTK_INCLUDE_DIRS})
+#message(WARNING ${WEBKIT2GTK_LIBRARIES})
 TARGET_LINK_LIBRARIES(unirun PRIVATE
     wx-static
+    ${WEBKIT2GTK_LIBRARIES}
     ${OPENGL_LIBRARIES}
     ${Fontconfig_LIBRARIES}
     ${EXPAT_LIBRARIES}
@@ -179,6 +180,7 @@ TARGET_LINK_LIBRARIES(unirun PRIVATE
 
 TARGET_LINK_LIBRARIES(olex2 PRIVATE
     wx-static
+    ${WEBKIT2GTK_LIBRARIES}
     ${OPENGL_LIBRARIES}
     ${Fontconfig_LIBRARIES}
     ${EXPAT_LIBRARIES}
@@ -191,7 +193,6 @@ TARGET_LINK_LIBRARIES(olex2 PRIVATE
     ${Python_LIBRARIES}
     ${OPENSSL_LIBRARIES}
     -lxkbcommon
-    ${WEBKIT2GTK_LIBRARIES}
 )
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DWXDEBUG_LEVEL=2 -D__WXDEBUG__ -DDEBUG_BITMAP_OPERATIONS")
