--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -10,7 +10,7 @@ endif()
 CPMAddPackage(
   NAME Ccache.cmake
   GITHUB_REPOSITORY TheLartians/Ccache.cmake
-  VERSION 1.2
+  VERSION 1.2.5
 )
 CPMAddPackage(
     NAME wxWidgetsSource
@@ -97,7 +97,9 @@ if(wxWidgetsSource_ADDED)
       ${wxWidgets_INSTALL_DIR}/include/wx-${wxVERSION_FAMILY}
       ${WXWIDGETS_SETUP_H_INCLUDE_DIR}
   )
-
+  target_link_directories(wx-static INTERFACE
+      ${wxWidgets_INSTALL_DIR}/lib
+  )
   find_package(PkgConfig QUIET)
   if(PKG_CONFIG_FOUND)
     pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
@@ -120,33 +122,66 @@ if(wxWidgetsSource_ADDED)
 
   set(WX_LIBRARIES
       # Order matters - more specific libraries first, then base libraries
-      ${wxWidgets_INSTALL_DIR}/lib/libwx_gtk3u_stc-${wxVERSION_FAMILY}.a
-      ${wxWidgets_INSTALL_DIR}/lib/libwx_gtk3u_xrc-${wxVERSION_FAMILY}.a
-      ${wxWidgets_INSTALL_DIR}/lib/libwx_gtk3u_html-${wxVERSION_FAMILY}.a
-      ${wxWidgets_INSTALL_DIR}/lib/libwx_gtk3u_qa-${wxVERSION_FAMILY}.a
-      ${wxWidgets_INSTALL_DIR}/lib/libwx_gtk3u_adv-${wxVERSION_FAMILY}.a
-      ${wxWidgets_INSTALL_DIR}/lib/libwx_gtk3u_core-${wxVERSION_FAMILY}.a
-      ${wxWidgets_INSTALL_DIR}/lib/libwx_baseu-${wxVERSION_FAMILY}.a
-      ${wxWidgets_INSTALL_DIR}/lib/libwx_baseu_xml-${wxVERSION_FAMILY}.a
-      ${wxWidgets_INSTALL_DIR}/lib/libwx_baseu_net-${wxVERSION_FAMILY}.a
+      -L/home/lucas/Documents/olex2/cmake-build-debug-gcc/3rdparty/wxwidgets/lib -pthread
+${wxWidgets_INSTALL_DIR}/lib/libwx_gtk3u_xrc-3.2.a
+${wxWidgets_INSTALL_DIR}/lib/libwx_gtk3u_webview-3.2.a
+${wxWidgets_INSTALL_DIR}/lib/libwx_gtk3u_stc-3.2.a
+${wxWidgets_INSTALL_DIR}/lib/libwx_gtk3u_richtext-3.2.a
+${wxWidgets_INSTALL_DIR}/lib/libwx_gtk3u_ribbon-3.2.a
+${wxWidgets_INSTALL_DIR}/lib/libwx_gtk3u_propgrid-3.2.a
+${wxWidgets_INSTALL_DIR}/lib/libwx_gtk3u_aui-3.2.a
+${wxWidgets_INSTALL_DIR}/lib/libwx_gtk3u_gl-3.2.a
+${wxWidgets_INSTALL_DIR}/lib/libwx_gtk3u_qa-3.2.a
+${wxWidgets_INSTALL_DIR}/lib/libwx_baseu_net-3.2.a
+${wxWidgets_INSTALL_DIR}/lib/libwx_gtk3u_html-3.2.a
+${wxWidgets_INSTALL_DIR}/lib/libwx_gtk3u_core-3.2.a
+${wxWidgets_INSTALL_DIR}/lib/libwx_baseu_xml-3.2.a
+${wxWidgets_INSTALL_DIR}/lib/libwx_baseu-3.2.a
+-lwebkit2gtk-4.0
+-lsoup-2.4
+-Wl,--export-dynamic
+-lgmodule-2.0
+-pthread
+-ljavascriptcoregtk-4.0
+-lGL
+-lGLU
+-lEGL
+-lwayland-egl
+-lwayland-client
+-lgthread-2.0
+-pthread
+-lX11
+-lSM
+-lxkbcommon
+-lgtk-3
+-lgdk-3
+-lz
+-lpangocairo-1.0
+-latk-1.0
+-lcairo-gobject
+-lcairo
+-lgdk_pixbuf-2.0
+-lgio-2.0
+-lXtst
+-lpangoft2-1.0
+-lpango-1.0
+-lgobject-2.0
+-lglib-2.0
+-lharfbuzz
+-lfontconfig
+-lfreetype
+-lwxtiff-3.2
+-lwxjpeg-3.2
+-lwxpng-3.2
+-lwxregexu-3.2
+-lwxscintilla-3.2
+-lwxexpat-3.2
+-lwxzlib-3.2
+-lcurl
+-lm
 
-      ${wxWidgets_INSTALL_DIR}/lib/libwx_gtk3u_webview-${wxVERSION_FAMILY}.a
-      # Additional component libraries
-      ${wxWidgets_INSTALL_DIR}/lib/libwx_gtk3u_gl-${wxVERSION_FAMILY}.a
-      ${wxWidgets_INSTALL_DIR}/lib/libwx_gtk3u_aui-${wxVERSION_FAMILY}.a
-      ${wxWidgets_INSTALL_DIR}/lib/libwx_gtk3u_propgrid-${wxVERSION_FAMILY}.a
-      ${wxWidgets_INSTALL_DIR}/lib/libwx_gtk3u_ribbon-${wxVERSION_FAMILY}.a
-      ${wxWidgets_INSTALL_DIR}/lib/libwx_gtk3u_richtext-${wxVERSION_FAMILY}.a
 
-      # Support libraries
-      ${wxWidgets_INSTALL_DIR}/lib/libwxscintilla-${wxVERSION_FAMILY}.a
-      ${wxWidgets_INSTALL_DIR}/lib/libwxregexu-${wxVERSION_FAMILY}.a
 
-      # Image libraries
-      ${wxWidgets_INSTALL_DIR}/lib/libwxjpeg-${wxVERSION_FAMILY}.a
-      ${wxWidgets_INSTALL_DIR}/lib/libwxpng-${wxVERSION_FAMILY}.a
-      ${wxWidgets_INSTALL_DIR}/lib/libwxtiff-${wxVERSION_FAMILY}.a
-      ${wxWidgets_INSTALL_DIR}/lib/libwxzlib-${wxVERSION_FAMILY}.a
   )
   set(WX_LIBRARIES ${WX_LIBRARIES} PARENT_SCOPE)
   set(WX_SYSTEM_LIBS
@@ -162,6 +197,7 @@ if(wxWidgetsSource_ADDED)
   set(WX_SYSTEM_LIBS ${WX_SYSTEM_LIBS} PARENT_SCOPE)
   target_link_libraries(wx-static INTERFACE
       ${WX_LIBRARIES}
+      webkit2gtk-4.0
       ${WEBKIT2GTK_LIBRARIES}
       ${wxWidgets_INSTALL_DIR}/lib/libwxjpeg-${wxVERSION_FAMILY}.a
       ${wxWidgets_INSTALL_DIR}/lib/libwxpng-${wxVERSION_FAMILY}.a
